implementando SessaoDeVotacaoMapper e ajustando DTOs